--- a/source/markup/auth.html
+++ b/source/markup/auth.html
@@ -11,11 +11,12 @@
 </head>
 
 <body class="page__body">
+
 	<header class="header header_display_non">
 		<div class="header__menu-wrap">
 			<div class="header__menu-top">
 				<div class="header__user-wrap">
-					<button class="button_form_none  header__button-deck " type="button">
+					<button class="button_form_none  header__button-deck" type="button">
 						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#deck"></use>
 						</svg>
@@ -160,7 +161,7 @@
 					</button>
 				</div>
 
-				<button class="button button_color_yellow header__aut">
+				<button class="button button_color_yellow header__aut" type="button">
 					Авторизация
 				</button>
 
