--- a/source/markup/education.html
+++ b/source/markup/education.html
@@ -11,11 +11,12 @@
 </head>
 
 <body class="page__body">
-	<header class="header header_display_non">
+
+	<!-- <header class="header header_display_non">
 		<div class="header__menu-wrap">
 			<div class="header__menu-top">
 				<div class="header__user-wrap">
-					<button class="button_form_none  header__button-deck " type="button">
+					<button class="button_form_none  header__button-deck" type="button">
 						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#deck"></use>
 						</svg>
@@ -30,9 +31,9 @@
 					</button>
 				</div>
 
-			<a class="link logotype header__logotype" width="126" height="53" href="#главная">
-				<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
-			</a>
+				<a class="link logotype header__logotype" width="126" height="53" href="#главная">
+					<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
+				</a>
 
 				<div class="header__user-nav header__user-nav_media_deck ">
 
@@ -160,7 +161,7 @@
 					</button>
 				</div>
 
-				<button class="button button_color_yellow header__aut">
+				<button class="button button_color_yellow header__aut" type="button">
 					Авторизация
 				</button>
 
@@ -268,52 +269,44 @@
 				Меню
 			</button>
 		</nav>
-	</header>
+	</header> -->
 
 	<section class="education container">
-
 		<h2 class="text education__title">
 			Статьи
 		</h2>
-
-		<div class="education__inner">
+		<div class="education__inners">
 			<div class="card education__card">
-				<div class="card__content education__img education__img_inform_btc">
-				</div>
+				<a class="card__content education__img education__img_inform_btc" href="#"></a>
 				<div class="education__wrap">
 					<div class="card__top">
 						<p class="text card__text">
 							4 минуты
 						</p>
-
-						<a class="link link_level_advanced" href="">
+						<a class="link link_level_advanced" href="#">
 							Продвинутый
 						</a>
 					</div>
-
 					<h2 class="text education__title">
-						Полное руководство по торговле криптовалютой для начинающих
+						<a class="link" href="#">
+							Полное руководство по торговле криптовалютой для начинающих
+						</a>
 					</h2>
-
 					<p class="text">
 						Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 						на форекс,
 						крипто и других рынках.
 					</p>
-
 					<div class="content__button-wrap education__button-wrap">
 						<a class="button content__button education__button" href="#">
 							Торговля
 						</a>
-
 						<a class="button content__button" href="#">
 							Основы
 						</a>
-
 						<a class="button content__button" href="#">
 							Технический анализ
 						</a>
-
 						<a class="button content__button" href="#">
 							Экономика
 						</a>
@@ -322,41 +315,36 @@
 			</div>
 
 			<div class="card education__card">
-				<div class="card__content education__img education__img_inform_mean">
-				</div>
+				<a class="card__content education__img education__img_inform_mean" href="#"> </a>
 				<div class="education__wrap">
 					<div class="card__top">
 						<p class="text card__text">
 							4 минуты
 						</p>
-
 						<a class="link link_level_advanced" href="">
 							Продвинутый
 						</a>
 					</div>
-
 					<h2 class="text education__title">
-						Как создать хорошо сбалансированный криптопортфель </h2>
-
+						<a class="link" href="">
+							Как создать хорошо сбалансированный криптопортфель
+						</a>
+					</h2>
 					<p class="text">
 						Узнайте, как фиксировать прибыль, покупать провалы и получать высокодоходные проценты, инвестируя через
 						двойные
 						инвестиции Binance, легко монетизируя свой...
 					</p>
-
 					<div class="content__button-wrap education__button-wrap">
 						<a class="button content__button education__button" href="#">
 							Торговля
 						</a>
-
 						<a class="button content__button" href="#">
 							Основы
 						</a>
-
 						<a class="button content__button" href="#">
 							Технический анализ
 						</a>
-
 						<a class="button content__button" href="#">
 							Экономика
 						</a>
@@ -365,42 +353,36 @@
 			</div>
 
 			<div class="card education__card">
-				<div class="card__content education__img education__img_inform_ape">
-				</div>
+				<a class="card__content education__img education__img_inform_ape" href="#"> </a>
 				<div class="education__wrap">
 					<div class="card__top">
 						<p class="text card__text">
 							4 минуты
 						</p>
-
 						<a class="link link_level_advanced" href="">
 							Продвинутый
 						</a>
 					</div>
-
 					<h2 class="text education__title">
-						Что такое ApeCoin (APE)?
+						<a class="link" href="">
+							Что такое ApeCoin (APE)?
+						</a>
 					</h2>
-
 					<p class="text">
 						ApeCoin (APE) - это токен утилиты и управления ERC-20, который расширяет возможности экосистемы APE. Он
 						управляется
 						ApeCo в DAO и поддерживается...
 					</p>
-
 					<div class="content__button-wrap education__button-wrap">
 						<a class="button content__button education__button" href="#">
 							Торговля
 						</a>
-
 						<a class="button content__button" href="#">
 							Основы
 						</a>
-
 						<a class="button content__button" href="#">
 							Технический анализ
 						</a>
-
 						<a class="button content__button" href="#">
 							Экономика
 						</a>
@@ -409,41 +391,35 @@
 			</div>
 
 			<div class="card education__card">
-				<div class="card__content education__img education__img_inform_game">
-				</div>
+				<a class="card__content education__img education__img_inform_game" href="#"> </a>
 				<div class="education__wrap">
 					<div class="card__top">
 						<p class="text card__text">
 							4 минуты
 						</p>
-
 						<a class="link link_level_advanced" href="">
 							Продвинутый
 						</a>
 					</div>
-
 					<h2 class="text education__title">
-						Что такое Gamefly и Как Он Работает?
+						<a class="link" href="">
+							Что такое Gamefly и Как Он Работает?
+						</a>
 					</h2>
-
 					<p class="text">
 						Game Fi относится к блокчейн-играм "играй, чтобы заработать", которые предлагают игрокам экономические
 						стимулы.
 					</p>
-
 					<div class="content__button-wrap education__button-wrap">
 						<a class="button content__button education__button" href="#">
 							Торговля
 						</a>
-
 						<a class="button content__button" href="#">
 							Основы
 						</a>
-
 						<a class="button content__button" href="#">
 							Технический анализ
 						</a>
-
 						<a class="button content__button" href="#">
 							Экономика
 						</a>
@@ -452,42 +428,36 @@
 			</div>
 
 			<div class="card education__card">
-				<div class="card__content education__img education__img_inform_women">
-				</div>
+				<a class="card__content education__img education__img_inform_women" href="#"> </a>
 				<div class="education__wrap">
 					<div class="card__top">
 						<p class="text card__text">
 							4 минуты
 						</p>
-
 						<a class="link link_level_advanced" href="">
 							Продвинутый
 						</a>
 					</div>
-
 					<h2 class="text education__title">
+						<a class="link" href="">
 						Полное руководство по торговле криптовалютой для начинающих
+						</a>
 					</h2>
-
 					<p class="text">
 						Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 						на форекс,
 						крипто и других рынках.
 					</p>
-
 					<div class="content__button-wrap education__button-wrap">
 						<a class="button content__button education__button" href="#">
 							Торговля
 						</a>
-
 						<a class="button content__button" href="#">
 							Основы
 						</a>
-
 						<a class="button content__button" href="#">
 							Технический анализ
 						</a>
-
 						<a class="button content__button" href="#">
 							Экономика
 						</a>
@@ -496,42 +466,36 @@
 			</div>
 
 			<div class="card education__card">
-				<div class="card__content education__img education__img_inform_woo">
-				</div>
+				<a class="card__content education__img education__img_inform_woo" href="#"> </a>
 				<div class="education__wrap">
 					<div class="card__top">
 						<p class="text card__text">
 							4 минуты
 						</p>
-
 						<a class="link link_level_advanced" href="">
 							Продвинутый
 						</a>
 					</div>
-
 					<h2 class="text education__title">
+						<a class="link" href="">
 						Полное руководство по торговле криптовалютой для начинающих
+						</a>
 					</h2>
-
 					<p class="text">
 						Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 						на форекс,
 						крипто и других рынках.
 					</p>
-
 					<div class="content__button-wrap education__button-wrap">
 						<a class="button content__button education__button" href="#">
 							Торговля
 						</a>
-
 						<a class="button content__button" href="#">
 							Основы
 						</a>
-
 						<a class="button content__button" href="#">
 							Технический анализ
 						</a>
-
 						<a class="button content__button" href="#">
 							Экономика
 						</a>
@@ -540,61 +504,53 @@
 			</div>
 
 			<div class="card education__card">
-				<div class="card__content education__img education__img_inform_coti">
-				</div>
+				<a class="card__content education__img education__img_inform_coti" href="#"> </a>
 				<div class="education__wrap">
 					<div class="card__top">
 						<p class="text card__text">
 							4 минуты
 						</p>
-
 						<a class="link link_level_advanced" href="">
 							Продвинутый
 						</a>
 					</div>
-
 					<h2 class="text education__title">
+						<a class="link" href="">
 						Полное руководство по торговле криптовалютой для начинающих
+						</a>
 					</h2>
-
 					<p class="text">
 						Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 						на форекс,
 						крипто и других рынках.
 					</p>
-
 					<div class="content__button-wrap education__button-wrap">
 						<a class="button content__button education__button" href="#">
 							Торговля
 						</a>
-
 						<a class="button content__button" href="#">
 							Основы
 						</a>
-
 						<a class="button content__button" href="#">
 							Технический анализ
 						</a>
-
 						<a class="button content__button" href="#">
 							Экономика
 						</a>
 					</div>
 				</div>
 			</div>
-
-			<a class="button button_form_none education__link" href="#">
-				Показать еще
-			</a>
+			<div>
+				<a class="button button_form_none education__link" href="#">
+					Показать еще
+				</a>
+			</div>
 
 			<nav class="education__nav">
-				<button class="button button_form_none">
-					<svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path
-							d="M2.18154 4.5L5.40726 7.45683C5.72595 7.74895 5.72595 8.25136 5.40726 8.54348C5.12548 8.80178 4.69298 8.80178 4.4112 8.54348L0.804202 5.23716C0.37182 4.84083 0.37182 4.15917 0.804202 3.76284L4.4112 0.456518C4.69298 0.198221 5.12548 0.198221 5.40727 0.456518C5.72595 0.748638 5.72595 1.25105 5.40726 1.54317L2.18154 4.5Z"
-							fill="#A6A7B0" />
+				<button class="button button_form_none" type="button">
+					<svg width="6" height="9" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#left"></use>
 					</svg>
-
 				</button>
 				<ul class="menu education__menu">
 					<li class="education__item">
@@ -613,126 +569,122 @@
 						</a>
 					</li>
 				</ul>
-				<button class="button button_form_none">
-					<svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path
-							d="M3.81846 4.5L0.592736 1.54317C0.27405 1.25105 0.274049 0.748638 0.592735 0.456518C0.874522 0.19822 1.30702 0.19822 1.5888 0.456518L5.1958 3.76284C5.62818 4.15917 5.62818 4.84083 5.1958 5.23716L1.5888 8.54348C1.30702 8.80178 0.874522 8.80178 0.592735 8.54348C0.274049 8.25136 0.274049 7.74895 0.592735 7.45683L3.81846 4.5Z"
-							fill="#A6A7B0" />
-					</svg>
+				<button class="button button_form_none" type="button">
+				<svg width="6" height="9" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#right"></use>
+				</svg>
 				</button>
-		</div>
-		</nav>
+			</nav>
 	</section>
 
-	<footer class="footer container">
+	<!-- <footer class="footer container">
 		<div class="footer__top">
 
 			<a class="link logotype" width="126" height="53" href="#главная">
 				<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
 			</a>
 
-				<button class="button_form_none header__button-lang--hover footer__lang_media"
-					type="button">
-					RU
+			<button class="button_form_none header__button-lang--hover footer__lang_media" type="button">
+				RU
 
-					<nav class="header-nav__menu">
-						<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
-							<li class="header-nav__item-button">
-								<a class="button header-lang__link-button" href="">
-									English
-								</a>
-							</li>
+				<nav class="header-nav__menu">
+					<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								English
+							</a>
+						</li>
 
-							<li class="header-nav__item-button">
-								<a class="button header-lang__link-button" href="">
-									Polski
-								</a>
-							</li>
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								Polski
+							</a>
+						</li>
 
-							<li class="header-nav__item-button">
-								<a class="button  header-lang__link-button" href="">
-									繁體中文
-								</a>
-							</li>
+						<li class="header-nav__item-button">
+							<a class="button  header-lang__link-button" href="">
+								繁體中文
+							</a>
+						</li>
 
-							<li class="header-nav__item-button">
-								<a class="button  header-lang__link-button" href="">
-									العربية
-								</a>
-							</li>
+						<li class="header-nav__item-button">
+							<a class="button  header-lang__link-button" href="">
+								العربية
+							</a>
+						</li>
 
-							<li class="header-nav__item-button">
-								<a class="button  header-lang__link-button" href="">
-									Русский
-								</a>
-							</li>
+						<li class="header-nav__item-button">
+							<a class="button  header-lang__link-button" href="">
+								Русский
+							</a>
+						</li>
 
-							<li class="header-nav__item-button">
-								<a class="button  header-lang__link-button" href="">
-									Türkçe
-								</a>
-							</li>
+						<li class="header-nav__item-button">
+							<a class="button  header-lang__link-button" href="">
+								Türkçe
+							</a>
+						</li>
 
-							<li class="header-nav__item-button">
-								<a class="button  header-lang__link-button" href="">
-									Português
-								</a>
-							</li>
+						<li class="header-nav__item-button">
+							<a class="button  header-lang__link-button" href="">
+								Português
+							</a>
+						</li>
 
-							<li class="header-nav__item-button">
-								<a class="button header-lang__link-button" href="">
-									Svenska
-								</a>
-							</li>
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								Svenska
+							</a>
+						</li>
 
-							<li class="header-nav__item-button">
-								<a class="button header-lang__link-button" href="">
-									Bahasa Indonesia
-								</a>
-							</li>
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								Bahasa Indonesia
+							</a>
+						</li>
 
-							<li class="header-nav__item-button">
-								<a class="button header-lang__link-button" href="">
-									日本語
-								</a>
-							</li>
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								日本語
+							</a>
+						</li>
 
-							<li class="header-nav__item-button">
-								<a class="button header-lang__link-button" href="">
-									Filipino
-								</a>
-							</li>
+						<li class="header-nav__item-button">
+							<a class="button header-lang__link-button" href="">
+								Filipino
+							</a>
+						</li>
 
-							<li class="header-nav__item-button ">
-								<a class="button header-lang__link-button" href="">
-									Українська мова
-								</a>
-							</li>
+						<li class="header-nav__item-button ">
+							<a class="button header-lang__link-button" href="">
+								Українська мова
+							</a>
+						</li>
 
-							<li class="header-nav__item-button ">
-								<a class="button header-lang__link-button" href="">
-									Čeština
-								</a>
-							</li>
-							<li class="header-nav__item-button ">
-								<a class="button header-lang__link-button" href="">
-									Български
-								</a>
-							</li>
-							<li class="header-nav__item-button ">
-								<a class="button header-lang__link-button" href="">
-									اردو
-								</a>
-							</li>
-							<li class="header-nav__item-button ">
-								<a class="button header-lang__link-button" href="">
-									latviešu valoda
-								</a>
-							</li>
+						<li class="header-nav__item-button ">
+							<a class="button header-lang__link-button" href="">
+								Čeština
+							</a>
+						</li>
+						<li class="header-nav__item-button ">
+							<a class="button header-lang__link-button" href="">
+								Български
+							</a>
+						</li>
+						<li class="header-nav__item-button ">
+							<a class="button header-lang__link-button" href="">
+								اردو
+							</a>
+						</li>
+						<li class="header-nav__item-button ">
+							<a class="button header-lang__link-button" href="">
+								latviešu valoda
+							</a>
+						</li>
 
-						</ul>
-					</nav>
-				</button>
+					</ul>
+				</nav>
+			</button>
 
 			<p class="text footer__text_media_desktop">
 				Copyright © 2022 Bithoven.com.
@@ -794,7 +746,7 @@
 			</div>
 		</div>
 		<div class="footer__list">
-			<button class="button button_form_none footer__button">Discover</button>
+			<button class="button button_form_none footer__button" type="button">Discover</button>
 			<ul class="menu footer__menu footer__menu_state_active">
 				<li class="footer__item">
 					<a class="link footer__link" href="#">
@@ -823,7 +775,7 @@
 		</div>
 
 		<div class="footer__list">
-			<button class="button button_form_none footer__button">Продукт</button>
+			<button class="button button_form_none footer__button" type="button">Продукт</button>
 			<ul class="menu footer__menu">
 				<li class="footer__item">
 					<a class="link link footer__link" href="#">
@@ -864,7 +816,7 @@
 		</div>
 
 		<div class="footer__list">
-			<button class="button button_form_none footer__button">Компания</button>
+			<button class="button button_form_none footer__button" type="button">Компания</button>
 			<ul class="menu footer__menu">
 				<li class="footer__item">
 					<a class="link footer__link" href="#">
@@ -972,6 +924,8 @@
 			All rights reserved.
 		</p>
 		</а>
+	</footer> -->
+
 		<script src="assets/scripts/index.js"></script>
 		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
