--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -279,7 +279,7 @@
 					</button>
 				</div>
 
-				<button class="button button_color_yellow header__aut">
+				<button class="button button_color_yellow header__aut" type="button">
 					Авторизация
 				</button>
 
@@ -949,12 +949,14 @@
 				Показать еще
 			</a>
 			<nav class="education__nav">
-				<button class="button button_form_none">
+				<button class="button button_form_none" type="button">
+
 					<svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path
 							d="M2.18154 4.5L5.40726 7.45683C5.72595 7.74895 5.72595 8.25136 5.40726 8.54348C5.12548 8.80178 4.69298 8.80178 4.4112 8.54348L0.804202 5.23716C0.37182 4.84083 0.37182 4.15917 0.804202 3.76284L4.4112 0.456518C4.69298 0.198221 5.12548 0.198221 5.40727 0.456518C5.72595 0.748638 5.72595 1.25105 5.40726 1.54317L2.18154 4.5Z"
 							fill="#A6A7B0" />
 					</svg>
+
 				</button>
 				<ul class="menu education__menu">
 					<li class="education__item">
@@ -973,12 +975,14 @@
 						</a>
 					</li>
 				</ul>
-				<button class="button button_form_none">
+				<button class="button button_form_none" type="button">
+
 					<svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path
 							d="M3.81846 4.5L0.592736 1.54317C0.27405 1.25105 0.274049 0.748638 0.592735 0.456518C0.874522 0.19822 1.30702 0.19822 1.5888 0.456518L5.1958 3.76284C5.62818 4.15917 5.62818 4.84083 5.1958 5.23716L1.5888 8.54348C1.30702 8.80178 0.874522 8.80178 0.592735 8.54348C0.274049 8.25136 0.274049 7.74895 0.592735 7.45683L3.81846 4.5Z"
 							fill="#A6A7B0" />
 					</svg>
+					
 				</button>
 			</nav>
 		</div>
@@ -1117,7 +1121,7 @@
 			</div>
 		</div>
 		<div class="footer__list">
-			<button class="button button_form_none footer__button">Discover</button>
+			<button class="button button_form_none footer__button" type="button">Discover</button>
 			<ul class="menu footer__menu footer__menu_state_active">
 				<li class="footer__item">
 					<a class="link footer__link" href="#">
@@ -1146,7 +1150,7 @@
 		</div>
 
 		<div class="footer__list">
-			<button class="button button_form_none footer__button">Продукт</button>
+			<button class="button button_form_none footer__button" type="button">Продукт</button>
 			<ul class="menu footer__menu">
 				<li class="footer__item">
 					<a class="link link footer__link" href="#">
@@ -1187,7 +1191,7 @@
 		</div>
 
 		<div class="footer__list">
-			<button class="button button_form_none footer__button">Компания</button>
+			<button class="button button_form_none footer__button" type="button">Компания</button>
 			<ul class="menu footer__menu">
 				<li class="footer__item">
 					<a class="link footer__link" href="#">
