--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -49,10 +49,8 @@
 
 
 		<div class="header__menu-wrap">
-
 			<div class="header__menu-top">
 				<div class="header__user-wrap">
-
 					<button class="button button_form_none  header__button-deck header__button-deck--hover" type="button">
 						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#deck"></use>
@@ -225,7 +223,7 @@
 					</button>
 				</div>
 
-				<a class="link logotype header__logo" width="126" height="53" href="#главная">
+				<a class="link logotype header__logotype" width="126" height="53" href="#главная">
 					<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
 				</a>
 
@@ -359,7 +357,7 @@
 					</div>
 				</div>
 
-				<button class="button button_color_yellow header__aut">
+				<button class="button button_color_yellow header__aut" type="button">
 					Авторизация
 				</button>
 
@@ -555,7 +553,7 @@
 
 
 	<nav class="mobile-menu mobile-menu_lang">
-		<button class="button_form_none mobile-menu__button mobile-menu__button-ofLang type=" button">
+		<button class="button_form_none mobile-menu__button mobile-menu__button-ofLang type=" type="button">
 			<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
 				<use href="assets/images/svg/sprite.svg#onof"></use>
 			</svg>
@@ -748,7 +746,6 @@
 	<script src="assets/scripts/index.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
-
 </html>
 
 
