filter__bottom fix

--- a/source/markup/education.html
+++ b/source/markup/education.html
@@ -12,28 +12,222 @@
 
 <body class="page__body">
 
-	<!-- <header class="header header_display_non">
-		<div class="header__menu-wrap">
-			<div class="header__menu-top">
-				<div class="header__user-wrap">
-					<button class="button_form_none  header__button-deck" type="button">
+
+	<header class="header">
+		<header class="header-mobile container ">
+			<div class="content__wrap header-mobile__content">
+
+				<a class="link logotype header-mobile__logotype" width="126" height="53" href="#главная">
+					<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
+				</a>
+
+				<nav class="header-mobile__nav">
+					<button class="button_form_none header-mobile__deck  header__button-deck" type="button">
 						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#deck"></use>
 						</svg>
 					</button>
 
-					<button class="button_form_none header__button-learn" type="button">
-						Узнать
+					<button class="button_form_none header-mobile__lang" type="button">
+						RU
 					</button>
 
-					<button class="button_form_none header__button-nav " type="button">
+					<div class="middle header-mobile__search">
+						<form class="search-box" action="" method="post">
+							<input class="input header-mobile__input" type="text" name="" value="">
+							<button class="btn header-mobile__btn" type="button" name="button"></button>
+						</form>
+					</div>
+
+					<button class="button_form_none header-mobile__auth" type="button">
+						<svg class="header__svg" width="26" height="15" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#noauth"></use>
+						</svg>
+					</button>
+				</nav>
+			</div>
+		</header>
+
+
+		<div class="header__menu-wrap">
+			<div class="header__menu-top">
+				<div class="header__user-wrap">
+					<button class="button button_form_none  header__button-deck header__button-deck--hover" type="button">
+						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#deck"></use>
+						</svg>
+
+						<nav class="header-nav__menu header-nav__menu_yes">
+							<ul class="menu header-nav">
+								<li class="header-nav__item header-nav__item--bnb">
+									<a class="header-nav__link" href="">
+										Обмен
+										<span class="header-nav__text">
+											Блокчейн и обмен криптоактивами
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--laba">
+									<a class="header-nav__link" href="">
+										Лаборатория
+										<span class="header-nav__text">
+											Инкубатор для топовых блокчейн-проектов
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--study">
+									<a class="header-nav__link" href="">
+										Исследование
+										<span class="header-nav__text">
+											Анализ и отчеты на институциональном уровне
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--bcf">
+									<a class="header-nav__link" href="">
+										BCF
+										<span class="header-nav__text">
+											Благотворительный фонд Blockchain
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--rocket">
+									<a class="header-nav__link" href="">
+										Панель запуска
+										<span class="header-nav__text">
+											Платформа для запуска токенов
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--shield">
+									<a class="header-nav__link" href="">
+										Доверительный кошелек
+										<span class="header-nav__text">
+											Официальный криптокошелек Binances
+										</span>
+									</a>
+								</li>
+							</ul>
+						</nav>
+					</button>
+
+					<button class="button_form_none header__button-learn header__button-learn--hover" type="button">
+						Узнать
+
+						<nav class="header-nav__menu">
+							<ul class="menu header-nav header-nav_size_smal">
+								<li class="header-nav__item header-nav__item--glossary">
+									<a class="header-nav__link" href="">
+										Глоссарий
+										<span class="header-nav__text">
+											Глоссарий криптотерминов
+										</span>
+									</a>
+								</li>
+
+								<li class="header-nav__item header-nav__item--game">
+									<a class="header-nav__link" href="">
+										Викторина
+										<span class="header-nav__text">
+											Проходите игровые тесты
+										</span>
+									</a>
+								</li>
+							</ul>
+						</nav>
+					</button>
+
+					<button class="button_form_none header__button-nav header__button-nav--hover" type="button">
 						Темы
+
+						<nav class="header-nav__menu">
+							<ul class="menu header-nav header-nav_size_smal">
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Altcoin
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Binance
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Основы
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Глоссарий
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Майнинг
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Блокчейн
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Экономика
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										DeFi
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										История
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Руководство
+									</a>
+								</li>
+
+								<li class="header-nav__item-button">
+									<a class="button header-nav__link-button" href="">
+										Биткоин
+									</a>
+								</li>
+
+								<li class="header-nav__item-button ">
+									<a class="button header-nav__link-button button_color_active" href="">
+										Еще
+									</a>
+								</li>
+
+							</ul>
+						</nav>
 					</button>
 				</div>
 
 				<a class="link logotype header__logotype" width="126" height="53" href="#главная">
 					<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
 				</a>
+
 
 				<div class="header__user-nav header__user-nav_media_deck ">
 
@@ -45,15 +239,19 @@
 
 
 					<button class="button_form_none header__button-acc" type="button">
-						<svg class="header__svg" width="25" height="25" aria-hidden="true" focusable="false">
+						<svg class="header__svg header__svg-login" width="25" height="25" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#acc"></use>
 						</svg>
+
+						<div class="header__button-login">
+							<img class="header__button-img" src="assets/images/header/account.png" alt="автврка пользователя">
+							<span class="header__button-name">[Vip]</span>
+						</div>
 					</button>
 
 
 					<button class="button_form_none header__button-leng header__button-lang--hover" type="button">
 						RU
-
 						<nav class="header-nav__menu">
 							<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
 								<li class="header-nav__item-button">
@@ -148,17 +346,16 @@
 										latviešu valoda
 									</a>
 								</li>
-
 							</ul>
 						</nav>
 					</button>
 
-
-					<button class="button_form_none header__button-sedes" type="button">
-						<svg class="header__svg" width="13" height="14" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#sedes"></use>
-						</svg>
-					</button>
+					<div class="middle">
+						<form action="" class="search-box" method="post">
+							<input type="text" class="input" name="" value="">
+							<button type="button" class="btn" name="button"></button>
+						</form>
+					</div>
 				</div>
 
 				<button class="button button_color_yellow header__aut" type="button">
@@ -240,36 +437,56 @@
 			</ul>
 		</div>
 
-		<nav class="header__nav header__nav_display_non">
-			<button class="button_form_none header__button-bottom header__button_type_home" type="button">
+		<div class="form">
+			<form action="" class="form__form" method="post">
+				<input class="form__input" type="text" name="text" value="" id="search">
+
+				<button type="button" class="button_form_none form__button" name="button">
+					<svg class="form__svg" width="13" height="13" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#formof"></use>
+					</svg>
+				</button>
+			</form>
+		</div>
+
+		<!-- <nav class="header__nav">
+			<button class="header__button-bottom header__button_type_home" type="button">
 				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#home"></use>
 				</svg>
 				Главная
 			</button>
 
-			<button class="button_form_none header__button-bottom header__button_type_search" type="button">
-				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#search"></use>
+			<button class="middle_media_mobile header__button-bottom" type="button"> -->
+		<!-- <form action="" class="search-box search-box_media_mobile" method="post">
+					<input type="text" class="input input_media_mobile" name="text" value="" id="search">
+					<label class="middle__label middle__label_media_mobile" for="search">Поиск</label>
+					<button type="button" class="btn btn_media_mobile" name="button"></button>
+				</form> -->
+		<!-- <svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#searchBac"></use>
 				</svg>
 				Поиск
 			</button>
 
-			<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
+
+
+			<button class="header__button-bottom header__button_type_profile" type="button">
 				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#profile"></use>
 				</svg>
 				Профиль
 			</button>
 
-			<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+			<button class="header__button-bottom header__button_type_menu" type="button">
 				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#menu"></use>
 				</svg>
 				Меню
 			</button>
-		</nav>
-	</header> -->
+		</nav> -->
+
+	</header>
 
 	<section class="education container">
 		<h2 class="text education__title">
@@ -577,7 +794,7 @@
 			</nav>
 	</section>
 
-	<!-- <footer class="footer container">
+	<footer class="footer container">
 		<div class="footer__top">
 
 			<a class="link logotype" width="126" height="53" href="#главная">
@@ -924,7 +1141,7 @@
 			All rights reserved.
 		</p>
 		</а>
-	</footer> -->
+	</footer>
 
 		<script src="assets/scripts/index.js"></script>
 		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
